kubernetes/key-cloak/keycloak-gateway-staging.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-keycloak
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-cert
      hosts:
        - <change-me>
